Responsive layout issue

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body{
     background-color: #f9f5f5;
     margin: 0;
     padding: 0;
+    width: 100%;
+    min-height: 100%;
 }
 .body{
     background-image: url(wild-nature-7680x4320.jpg);
